# postbox

./: .dockerignore  .env.example  .gitignore  BOT_SETUP.md  Dockerfile  PYTHON_PACKAGING.md  README.md  alembic.ini  bot_example.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  start.py  start.sh
.github/workflows/: deploy.yml  quality_tests.yml  release.yml
docs/: deployment.md  design.md  development.md  mvp.md  roadmap.md  storage.md
migrations/: env.py
migrations/versions/: 20260715_0001_create_postbox_records.py  20260715_0002_allow_unknown_sent_date.py  20260719_0003_add_user_approval.py
scripts/: backup_sqlite.sh  deploy.sh  verify_backup.sh
src/postbox/: __init__.py  __main__.py  api.py  app.py  auth.py  config.py  init_db.py  logging.py  telegram_notifier.py  texts.py
src/postbox/database/: __init__.py  base.py  connection.py  middleware.py
src/postbox/handlers/: __init__.py  common.py  delivery.py  journal.py  menu.py  notes.py  receive.py  send.py  start.py
src/postbox/keyboards/: __init__.py  delivery.py  journal.py  main_menu.py  notes.py  receive.py  send.py
src/postbox/models/: __init__.py  correspondent.py  mail_item.py  user.py
tests/: test_api.py  test_config.py  test_database_middleware.py  test_delivery.py  test_handlers.py  test_journal.py  test_main_menu.py  test_models.py  test_notes.py  test_packaging.py  test_receive.py  test_send.py  test_sqlite_parity.py
web/: README.md  RUNTIME.md  middleware.ts  package-lock.json  package.json
web/app/: JournalScreen.tsx  globals.css  layout.tsx  page.tsx
web/app/hooks/: useAuth.ts
web/app/lib/: auth.ts  telegram-web-app.ts
web/app/login/: page.tsx
web/tests/: rendered-html.test.mjs
